# ZeroTamper

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  render.yaml  schema.sql  start_all.sh  vercel.json
apps/backend/: .env.example  package.json
apps/backend/src/: app.ts  index.ts
apps/backend/src/lib/: memoryStore.ts  solana.ts  supabase.ts
apps/backend/src/middleware/: auth.ts  rateLimiter.ts
apps/backend/src/routes/: evidence.ts  export.ts  health.ts  incidents.ts  leaderboard.ts  score.ts  stats.ts  verify.ts
apps/backend/src/services/: clustering.ts  deepfake.ts  ipfs.ts  scoring.ts  solana.ts
apps/backend/src/types/: evidence_registry.json  evidence_registry.ts
apps/dashboard/: .env.example  next.config.js  package-lock.json  package.json
apps/dashboard/src/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/src/components/: AuthButton.tsx  (+5 more)
apps/mobile/: App.tsx  package-lock.json  package.json
ml/deepfake-detector/: .env.example  Dockerfile  main.py  package.json  requirements.txt  test_load.py  test_load2.py  test_load_h5.py  test_load_h5_keras3.py
ml/deepfake-detector/src/: deepfake.ts  phash.ts  server.ts
programs/evidence-registry/: Cargo.toml
programs/evidence-registry/src/: errors.rs  lib.rs
programs/evidence-registry/src/instructions/: corroborate.rs  export.rs  flag.rs  mint_badge.rs  mod.rs  submit.rs  update_score.rs
programs/evidence-registry/src/state/: mod.rs
supabase/: config.toml
supabase/migrations/: 20260508184129_init_schema.sql
tests/: evidence-registry.ts
(+11 files in other folders)
