[package]
name = "evidence-registry"
version = "0.1.0"
description = "WitnessChain Evidence Registry — tamper-proof civic evidence anchoring on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "evidence_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
mpl-token-metadata = { version = "4.1.1", features = ["no-entrypoint"] }

[dev-dependencies]
anchor-client = "0.30.1"
