[package]
name = "evidence-registry"
version = "0.1.0"
description = "WitnessChain Evidence Registry — tamper-proof civic evidence anchoring on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "evidence_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"

[dev-dependencies]
anchor-client = "0.30.1"
